force-app/main/default/objects/Opportunity/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>데이터센터 냉각 대상 전력 용량(MW). Lead 전환 시 예상 규모에서 이관되며 제안·설계의 기준값이 된다.</description>
    <inlineHelpText>냉각 대상 IT 부하 용량을 MW 단위로 입력하세요.</inlineHelpText>
    <label>용량(MW)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>