force-app/main/default/objects/Opportunity/fields/Customer_Proposal_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Proposal_Status__c</fullName>
    <description>영업 담당자가 고객에게 제출한 제안의 진행 상태. S4 제안 단계에서 갱신하며 Handoff 판정의 입력이 된다.</description>
    <inlineHelpText>고객에게 제안서를 제출/수정/수락받은 현재 상태를 선택하세요.</inlineHelpText>
    <label>고객 제안 상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>미제출</fullName>
                <default>true</default>
                <label>미제출</label>
            </value>
            <value>
                <fullName>제출</fullName>
            </value>
            <value>
                <fullName>수정요청</fullName>
            </value>
            <value>
                <fullName>수락</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>