force-app/main/default/objects/Opportunity/fields/Evidence_Link__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Link__c</fullName>
    <description>Hall A 운영·RCA 증거로 연결되는 링크. 증설 검토가 근거 있는 검토의 시작임을 뒷받침한다.</description>
    <inlineHelpText>Hall A 증거 자료(운영 기록·RCA 결과 등)의 URL을 입력하세요.</inlineHelpText>
    <label>증거 링크</label>
    <type>Url</type>
</CustomField>