force-app/main/default/objects/Opportunity/fields/Expansion_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Capacity__c</fullName>
    <description>Hall B 증설로 추가되는 냉각 대상 전력 용량(MW). Hall A 운영 근거 위에서 검토되는 증설 규모의 기준값이다.</description>
    <inlineHelpText>이번 증설로 추가되는 냉각 용량을 MW 단위로 입력하세요.</inlineHelpText>
    <label>확장 용량</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>