force-app/main/default/objects/Opportunity/fields/Expansion_Timing__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Timing__c</fullName>
    <description>Hall B 증설이 예정된 시기. 고객 확장계획의 목표 시점으로, 제안·설계 일정의 기준이 된다.</description>
    <inlineHelpText>증설이 예정된 목표 시기를 입력하세요.</inlineHelpText>
    <label>확장 시기</label>
    <type>Date</type>
</CustomField>