force-app/main/default/objects/Opportunity/fields/Handoff_Status__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Status__c</fullName>
    <description>S4 영업 → D1 딜리버리 인수 게이트 상태. Accepted 견적·계약·고객 약속 3종이 완비되면 Flow가 READY로 자동 전환하고, 인수 담당이 확인 후 ACCEPTED로 변경한다.</description>
    <inlineHelpText>영업 인수 게이트 상태입니다. 3종(수락 견적·계약·고객 약속) 완비 시 자동으로 READY가 되며, 딜리버리 인수 확인 후 ACCEPTED로 바뀝니다.</inlineHelpText>
    <label>인수 상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOT_READY</fullName>
                <default>true</default>
                <label>NOT_READY</label>
            </value>
            <value>
                <fullName>READY</fullName>
            </value>
            <value>
                <fullName>ACCEPTED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>