force-app/main/default/objects/Opportunity/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <description>냉각설비 프로젝트의 성격. 신축/증설/교체에 따라 설계·제안 접근이 달라진다.</description>
    <inlineHelpText>프로젝트가 신축·증설·교체 중 어디에 해당하는지 선택하세요.</inlineHelpText>
    <label>프로젝트 유형</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>신축</fullName>
            </value>
            <value>
                <fullName>증설</fullName>
            </value>
            <value>
                <fullName>교체</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>