force-app/main/default/objects/Opportunity/fields/Proposal_Scope__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Scope__c</fullName>
    <description>서비스 계약 갱신 Opportunity의 상업적 제안 범위입니다.</description>
    <inlineHelpText>단순 갱신, 설비 교체 또는 Hall B 증설 중 이번 제안의 범위를 선택합니다.</inlineHelpText>
    <label>제안 범위</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>유지보수 갱신</fullName>
            </value>
            <value>
                <fullName>갱신 + 설비 교체</fullName>
            </value>
            <value>
                <fullName>갱신 + Hall B 증설</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>