force-app/main/default/objects/Opportunity/fields/Residual_Risk__c.field-meta.xml
<CustomField>
    <fullName>Residual_Risk__c</fullName>
    <description>Hall A RCA 재발방지 완료 후에도 남은 위험. O3 결과가 O4 증설 판단의 근거가 됨을 증명하는 서술 필드다.</description>
    <inlineHelpText>재발방지 조치 이후에도 남아 있는 위험 요소를 기술하세요.</inlineHelpText>
    <label>잔여 위험</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>