force-app/main/default/objects/Opportunity/fields/SLA_Summary__c.field-meta.xml
<CustomField>
    <fullName>SLA_Summary__c</fullName>
    <label>서비스 실적 요약</label>
    <description>갱신·확장 브리핑 Flow가 고객사 Case/Milestone에서 SLA 준수율·조기 감지 실적을 집계해 자동 기입하는 필드. 사람이 직접 입력하지 않는다.</description>
    <inlineHelpText>브리핑 Flow가 자동으로 채웁니다. 직접 수정하지 마세요 — 다음 실행 때 덮어써집니다.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>