force-app/main/default/objects/Opportunity/fields/Source_Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Source_Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>갱신 Opportunity가 시작된 원본 Service Contract입니다.</description>
    <inlineHelpText>이 사업기회의 갱신 근거가 된 서비스 계약을 선택합니다.</inlineHelpText>
    <label>원본 서비스 계약</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>갱신 Opportunities</relationshipLabel>
    <relationshipName>Renewal_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>