force-app/main/default/objects/Opportunity/fields/Technical_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Technical_Review_Status__c</fullName>
    <description>Technical_Review__c.Status__c와 값 도메인 공유</description>
    <inlineHelpText>연결된 기술검토의 진행 상태. 값은 기술검토 레코드의 &apos;상태&apos;와 일치시킨다</inlineHelpText>
    <label>기술검토 상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>미착수</fullName>
            </value>
            <value>
                <fullName>진행중</fullName>
            </value>
            <value>
                <fullName>완료</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>