force-app/main/default/objects/Opportunity/validationRules/Require_Internal_Approval_Before_Sell.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Internal_Approval_Before_Sell</fullName>
    <active>true</active>
    <description>증설(Type=Existing Business) 사업기회는 내부 추진 승인(Internal_Approval_Status__c=승인)을 받기 전에는 SELL 단계(Proposal/Quote 이상)로 넘어갈 수 없다.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Type, &quot;Existing Business&quot;),
    NOT(ISPICKVAL(Internal_Approval_Status__c, &quot;승인&quot;)),
    OR(
        ISPICKVAL(StageName, &quot;Proposal/Quote&quot;),
        ISPICKVAL(StageName, &quot;Negotiation&quot;),
        ISPICKVAL(StageName, &quot;Closed Won&quot;)
    )
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>내부 추진 승인이 완료되어야 SELL 단계로 진행할 수 있습니다. &apos;승인 요청&apos;으로 제출해 승인을 받으세요.</errorMessage>
</ValidationRule>