force-app/main/default/objects/Opportunity/listViews/My_Open_Opportunities.listView-meta.xml
<ListView>
    <fullName>My_Open_Opportunities</fullName>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>내 오픈 기회</label>
</ListView>